0.50:
 * Right mouse button rotation now pivots around the camera.
 * Added --font-file option.
 * Added --enable-font-file option to configure.
 * Added --no-time-travel option (Lars Schmertmann).
 * Added --dir-name-position option (Lars Schmertmann).
 * Added --file-extension-fallback option (Lars Schmertmann).
 * Added --user-show-filter option (Victor Lopez).
 * Fixed a bug in the Mercurial log parser that caused changes to be missed.
 * Fixed file removal being cancelled by an action with an earlier timestamp.
 * Fixed a bug in the log file format detection that could result in the wrong
   first entry being displayed for a custom log.

0.49:
 * Fixed compatibility with GLM 0.9.9.0.

0.48:
 * Can now generate logs from git sub module directories.

0.47:
 * Fixed low mouse movement speed with some mice while repositioning camera.

0.46:
 * Added --screen option.

0.45:
 * Added --window-position XxY option.
 * Added --frameless option.
 * Added --file-show-filter REGEX option (swoogles).
 * Added --filename-time and filename-colour options (gh2k).
 * Improved handling of very low seconds-per-day values (malengrin).
 * Fixed crash when SVN log lacks author information (obarthel).
 * Additional git log command validation (cym13).
 * Allow lower case hex colours in custom logs (HSorensen).
 * Enabled STDOUT support with --output-stream '-' on Windows (circulosmeos).
 * Now requires SDL 2 to build (deprecated SDL 1.2 support removed).

0.44:
 * Fixed crash when taking a screenshot with an odd resolution.
 * Fixed type deduction compilation error with newer versions of GCC.
 * Documentation improvements.

0.43:
 * Updated boost autoconf macros to fix multi-arch detection.

0.42:
 * Fixed bzr log command when no start date was specified (chrisf).
 * Fixed hg log commit order when date range specified.
 * Fixed hg log command line on Windows.
 * Fixed parser bug in date range filtering code.

0.41:
 * Multi-monitor support using SDL 2.0 when available.