@@ -226,6 +226,9 @@ Camera mode (overview,track).
 \fB\-\-disable\-auto\-rotate\fR
 Disable automatic camera rotation.
 .TP
+\fB\-\-disable\-input\fR
+Disable keyboard and mouse input.
+.TP
 \fB\-\-hide DISPLAY_ELEMENT\fR
 Hide one or more display elements from the list below:
 
